tests/baselines/reference/constructSignatureWithAccessibilityModifiersOnParameters2(strict=true).errors.txt
constructSignatureWithAccessibilityModifiersOnParameters2.ts(4,17): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(4,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(4,27): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(4,27): error TS7006: Parameter 'y' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,24): error TS2300: Duplicate identifier 'x'.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,27): error TS7006: Parameter 'y' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,35): error TS2300: Duplicate identifier 'y'.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(9,17): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(9,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(9,25): error TS2687: All declarations of 'x' must have identical modifiers.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(10,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(10,24): error TS2300: Duplicate identifier 'x'.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(10,24): error TS2687: All declarations of 'x' must have identical modifiers.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(14,17): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(14,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(15,17): error TS7006: Parameter 'y' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(19,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(19,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(19,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(20,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(20,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(20,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(24,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(24,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(24,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(25,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(25,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(25,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(29,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(29,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(29,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(30,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(30,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(30,10): error TS7006: Parameter 'y' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(34,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(34,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(34,10): error TS7006: Parameter 'x' implicitly has an 'any' type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(35,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(35,10): error TS2369: A parameter property is only allowed in a constructor implementation.
constructSignatureWithAccessibilityModifiersOnParameters2.ts(35,10): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== constructSignatureWithAccessibilityModifiersOnParameters2.ts (41 errors) ====
    // Parameter properties are not valid in overloads of constructors
    
    class C {
        constructor(public x, private y);
                    ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                    ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                              ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                              ~~~~~~~~~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        constructor(public x, private y) { }
                    ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                           ~
!!! error TS2300: Duplicate identifier 'x'.
                              ~~~~~~~~~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                                      ~
!!! error TS2300: Duplicate identifier 'y'.
    }
    
    class C2 {
        constructor(private x);
                    ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                    ~~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                            ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
        constructor(public x) { }
                    ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                           ~
!!! error TS2300: Duplicate identifier 'x'.
                           ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    }
    
    class C3 {
        constructor(private x);
                    ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
                    ~~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        constructor(private y) { }
                    ~~~~~~~~~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    }
    
    interface I {
        new (public x);
        ~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        new (public x);
        ~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    interface I2 {
        new (private x);
        ~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        new (private x);
        ~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    var a: {
        new (public x);
        ~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        new (public y);
        ~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    }
    
    var b: {
        new (private x);
        ~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        new (private y);
        ~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
             ~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
             ~~~~~~~~~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    }